--- a/HTML/form-cadastros.html
+++ b/HTML/form-cadastros.html
@@ -11,7 +11,7 @@
         <title>Formulário</title>
     </head>
     
-    <body onload="formGetStorage()">
+    <body>
          <nav class="top-nav">
             <div class="nav-wrapper">
                 <a id="titulo-pag" href="#" class="brand-logo">Ficha de cadastro</a>
@@ -133,15 +133,22 @@
                     </select>
                     </div>
                 </div>
-
+                
                 <div class="row">
-                    <div id="btnsalvarid">
+                    <div class="input-field col s3" id="btnsalvarid">
                         <button class="waves-effect waves-light btn" type="submit" id="btnsalvar"> <i class="material-icons left">save</i>Salvar</button>
                     </div>
-                </div>
 
             </form>
 
+                    <form method="get" action="cadastros.html" id="formcadastros">
+                        <div>
+                            <div class="input-field col s4" id="btnvertodos">
+                                <button class="waves-effect waves-light btn" id="btnvertodos" onclick="cadastros.html"> <i class="material-icons left">recent_actors</i>Ver todos</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
         </div>
 
         <script type="text/javascript" src="js/jquery-3.2.1.min.js"> </script>
