Formulário Matrix com Materialize, Vue.js e armazenando no LocalStorage como Array, Tarefa 5.2(atualização)

--- a/HTML/cadastros.html
+++ b/HTML/cadastros.html
@@ -44,6 +44,10 @@
             </tbody>
       </table>
 
+       <div class="input-field col s4" id="btnvertodos">
+            <a href="form-cadastros.html" class="waves-effect waves-light btn" id="btnFormCadastros"> <i class="material-icons left">recent_actors</i>Cadastrar</a>
+       </div>
+
         <script type="text/javascript" src="js/jquery-3.2.1.min.js"> </script>
         <script type="text/javascript" src="js/materialize.min.js"> </script>
         <script type="text/javascript" src="js/initialization.js"> </script>
