--- a/HTML/form-cadastros.html
+++ b/HTML/form-cadastros.html
@@ -119,14 +119,9 @@
                     </div>
 
             </form>
-
-                    <form method="get" action="cadastros.html" id="formcadastros">
-                        <div>
-                            <div class="input-field col s4" id="btnvertodos">
-                                <button class="waves-effect waves-light btn" id="btnvertodos" onclick="cadastros.html"> <i class="material-icons left">recent_actors</i>Ver todos</button>
-                            </div>
-                        </div>
-                    </form>
+                    <div class="input-field col s4" id="btnvertodos">
+                        <a href="cadastros.html" class="waves-effect waves-light btn" id="btnvertodos"> <i class="material-icons left">recent_actors</i>Ver todos</a>
+                    </div>
                 </div>
 
             </form>
