--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formulário</title>
-</head>
-
-<body>
-  <div id="app"></div>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=pt-br><head><meta charset=utf-8><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css><meta name=viewport content="width=device-width,initial-scale=1"><title>Formulário</title><link href=/static/css/app.b7bd8fbfb106df39d426380741157df7.css rel=stylesheet></head><body><div id=app></div><script src=https://code.jquery.com/jquery-3.2.1.min.js integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=anonymous></script><script src=https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js></script><script type=text/javascript src=/static/js/manifest.19a0f2a7366d2e65bbff.js></script><script type=text/javascript src=/static/js/vendor.88f1e3f8ee3c4b0d813f.js></script><script type=text/javascript src=/static/js/app.ed0273752ff28f313394.js></script></body></html>
